Pico Schema Crate for Table Topics (#31)
* Pico Schema Crate for registry
